crates/egui_mcp/src/snapshots/egui_mcp__tree__tests__query_tree_filtered.snap
---
source: crates/egui_mcp/src/tree.rs
expression: "pretty(&query_all(&QueryFilter\n{\n    query: Query { role: Some(\"button\".to_owned()), ..Default::default() },\n    ..Default::default()\n}))"
---
[
  {
    "id": "3",
    "role": "Button",
    "label": "OK",
    "focused": false,
    "disabled": false,
    "hidden": false
  }
]
