crates/egui_mcp/src/snapshots/egui_mcp__tree__tests__query_tree_unfiltered.snap
---
source: crates/egui_mcp/src/tree.rs
expression: "pretty(&query_all(&QueryFilter::default()))"
---
[
  {
    "id": "1",
    "role": "Window",
    "focused": true,
    "disabled": false,
    "hidden": false,
    "children": [
      {
        "id": "2",
        "focused": false,
        "disabled": false,
        "hidden": false,
        "children": [
          {
            "id": "3",
            "role": "Button",
            "label": "OK",
            "focused": false,
            "disabled": false,
            "hidden": false
          }
        ]
      },
      {
        "id": "ff",
        "label": "hi",
        "focused": false,
        "disabled": false,
        "hidden": false
      },
      {
        "id": "5",
        "value": "42",
        "focused": false,
        "disabled": false,
        "hidden": false
      }
    ]
  }
]
